--- a/service/configurations/postgresql/postgresql.conf
+++ b/service/configurations/postgresql/postgresql.conf
@@ -1,4 +1,4 @@
 ssl = on
-ssl_cert_file = '/var/lib/postgresql/pg_server_cert.pem'
-ssl_key_file = '/var/lib/postgresql/pg_server_key.key'
-ssl_ca_file = '/var/lib/postgresql/ca.cert'
+ssl_cert_file = '/run/secrets/pg_server_cert.pem'
+ssl_key_file = '/run/secrets/pg_server_key.pem'
+ssl_ca_file = '/run/secrets/ca.pem'
