--- a/service/configurations/redis/redis.conf
+++ b/service/configurations/redis/redis.conf
@@ -8,10 +8,13 @@ loadmodule /opt/redis-stack/lib/rejson.so
 
 port 0
 tls-port 6379
-tls-cert-file /certs/redis.crt
-tls-key-file /certs/redis.key
-tls-ca-cert-file /certs/ca.crt
+tls-cert-file /run/secrets/redis_server_cert.pem
+tls-key-file /ru/secrets/redis_server_key.pem
+tls-ca-cert-file /run/secrets/ca.pem
 tls-auth-clients yes
+
+
+
 
 
 # Unless specified otherwise, by default Redis will save the DB:
