--- a/service/docker-compose.redis.yml
+++ b/service/docker-compose.redis.yml
@@ -2,12 +2,10 @@ services:
   redis:
     image: redis/redis-stack-server:latest
     command:
-      [
-        "redis-server",
-        "/redis.conf",
-        "--requirepass",
-        "${REDIS_PASSWORD}",
-      ]
+      - sh
+      - -c
+      - |
+        redis-server /redis.conf --requirepass "$$(cat /run/secrets/REDIS_PASSWORD)"
     ports:
       - "6379:6379"
     secrets:
@@ -15,20 +13,32 @@ services:
       - ca.pem
       - redis_server_cert.pem
       - redis_server_key.pem
+      - fastapi_client_cert.pem
+      - fastapi_client_key.pem
     environment:
       - REDIS_PASSWORD=/run/secrets/REDIS_PASSWORD
     volumes:
-      - ./configurations/redis.conf:/redis.conf:ro
+      - ./configurations/redis/redis.conf:/redis.conf:ro
       - ./volumes/redis_storage:/data
     healthcheck:
       test:
         [
           "CMD-SHELL",
-          "redis-cli -a ${REDIS_PASSWORD} ping | grep PONG",
+          'redis-cli --tls --cacert /run/secrets/ca.pem --cert /run/secrets/fastapi_client_cert.pem --key /run/secrets/fastapi_client_key.pem  -a "$$(cat /run/secrets/REDIS_PASSWORD)" ping | grep PONG',
         ]
       interval: 5s
       timeout: 5s
       retries: 3
+    deploy:
+      mode: replicated
+      replicas: 1
+      placement:
+        constraints:
+          [
+            node.role == manager,
+          ]
+      restart_policy:
+        condition: on-failure
 
 volumes:
   redis_storage:
@@ -42,4 +52,8 @@ secrets:
   redis_server_cert.pem:
     external: true
   redis_server_key.pem:
+    external: true
+  fastapi_client_cert.pem:
+    external: true
+  fastapi_client_key.pem:
     external: true
