--- a/service/configurations/postgresql/postgresql.conf
+++ b/service/configurations/postgresql/postgresql.conf
@@ -1,3 +1,4 @@
+listen_addresses = '*'
 ssl = on
 ssl_cert_file = '/run/secrets/pg_server_cert.pem'
 ssl_key_file = '/var/lib/postgresql/certs/pg_server_key.pem'
