--- a/certs/.env
+++ b/certs/.env
@@ -5,6 +5,7 @@ POSTGRES_PASSWORD=kamronbek2003
 DATABASE_URL=postgresql+asyncpg://{POSTGRES_USER}:{POSTGRES_PASSWORD}@{localhost/postgres.kronk.uz}:5432/{POSTGRES_DB}?ssl=verify-full&slrootcert=/run/secrets/ca.pem&sslcert=/run/secrets/fastapi_client_cert.crt&sslkey=/run/secrets/fastapi_client_key.pem
 
 # REDIS
+REDIS_USER=default
 REDIS_PASSWORD=kamronbek2003
 REDIS_HOST={localhost/redis.kronk.uz}
 REDIS_PASSWORD=REDIS_PASSWORD
