Fri 19 12:34; tls one more try with compose

--- a/service/configurations/postgresql/postgresql.conf
+++ b/service/configurations/postgresql/postgresql.conf
@@ -1,6 +1,5 @@
 listen_addresses = '*'
 ssl = on
 ssl_cert_file = '/run/secrets/pg-server-cert.pem'
-# ssl_key_file = '/var/lib/postgresql/certs/pg_server-key.pem'
-# ssl_key_file = '/tmp/pg-server-key.pem'
+ssl_key_file = '/tmp/pg-server-key.pem'
 ssl_ca_file = '/run/secrets/ca.pem'
