--- a/service/configurations/redis-stack/redis-stack.conf
+++ b/service/configurations/redis-stack/redis-stack.conf
@@ -12,7 +12,7 @@ tls-cert-file /run/secrets/redis-server-cert.pem
 tls-key-file /run/secrets/redis-server-key.pem
 tls-ca-cert-file /run/secrets/ca.pem
 tls-auth-clients yes
-
+protected-mode no
 
 
 
