Fri 19 13:03; tls one more try with compose

--- a/service/configurations/postgresql/pg_hba.conf
+++ b/service/configurations/postgresql/pg_hba.conf
@@ -1,3 +1,15 @@
-# hostssl all all all cert clientcert=scram-sha-256
-hostssl all all all cert clientcert=verify-full
-hostnossl all all all reject
+# TYPE  DATABASE        USER            ADDRESS                 METHOD
+
+# Reject all non-SSL connections first (this should be at the top)
+hostnossl all             all             0.0.0.0/0               reject
+hostnossl all             all             ::/0                    reject
+
+# Allow SSL connections with client certificate verification
+hostssl   all             all             0.0.0.0/0               cert clientcert=verify-full
+hostssl   all             all             ::/0                    cert clientcert=verify-full
+
+# Optionally, be more specific about which users/databases can connect
+# hostssl   kronk_db        kamronbek       0.0.0.0/0               cert clientcert=verify-full
+
+# Local connections (if needed) - these are through Unix socket, not network
+# local     all             all                                     peer
