Fri 19 13:14; tls one more try with compose

--- a/service/configurations/postgresql/pg_hba.conf
+++ b/service/configurations/postgresql/pg_hba.conf
@@ -1,15 +1,10 @@
-# TYPE  DATABASE        USER            ADDRESS                 METHOD
+# 🔒 Reject all non-TLS connections
+hostnossl all all 0.0.0.0/0 reject
+hostnossl all all ::/0 reject
 
-# Reject all non-SSL connections first (this should be at the top)
-hostnossl all             all             0.0.0.0/0               reject
-hostnossl all             all             ::/0                    reject
+# ✅ Accept TLS connections only with client cert verification
+hostssl all all 0.0.0.0/0 cert clientcert=verify-full
+hostssl all all ::/0 cert clientcert=verify-full
 
-# Allow SSL connections with client certificate verification
-hostssl   all             all             0.0.0.0/0               cert clientcert=verify-full
-hostssl   all             all             ::/0                    cert clientcert=verify-full
-
-# Optionally, be more specific about which users/databases can connect
-# hostssl   kronk_db        kamronbek       0.0.0.0/0               cert clientcert=verify-full
-
-# Local connections (if needed) - these are through Unix socket, not network
-# local     all             all                                     peer
+# 🧪 Optional: socket/local connections inside container
+# local all all peer
