Fri 19 13:14; Finally TLS worked

--- a/service/configurations/postgresql/pg_hba.conf
+++ b/service/configurations/postgresql/pg_hba.conf
@@ -1,3 +1,6 @@
+# 🧪 Allow local socket access for CLI tools and health checks
+local all all scram-sha-256
+
 # 🔒 Reject all non-TLS connections
 hostnossl all all 0.0.0.0/0 reject
 hostnossl all all ::/0 reject
@@ -5,6 +8,3 @@ hostnossl all all ::/0 reject
 # ✅ Accept TLS connections only with client cert verification
 hostssl all all 0.0.0.0/0 cert clientcert=verify-full
 hostssl all all ::/0 cert clientcert=verify-full
-
-# 🧪 Optional: socket/local connections inside container
-# local all all peer
