--- a/service/configurations/postgresql/postgresql.conf
+++ b/service/configurations/postgresql/postgresql.conf
@@ -17,3 +17,6 @@ ssl_ciphers = 'HIGH:MEDIUM:+3DES:!aNULL' # Strong ciphers only
 
 # Additional security settings
 password_encryption = 'scram-sha-256'  # Use strong password hashing
+
+# log_connections = off
+# log_disconnections = off
