--- a/service/docker-compose.yml
+++ b/service/docker-compose.yml
@@ -21,6 +21,8 @@ services:
       - POSTGRES_DB_FILE=/run/secrets/POSTGRES_DB
       - POSTGRES_USER_FILE=/run/secrets/POSTGRES_USER
       - POSTGRES_PASSWORD_FILE=/run/secrets/POSTGRES_PASSWORD
+      # Additional security environment variables
+      - POSTGRES_INITDB_ARGS=--auth-host=cert --auth-local=peer
     volumes:
       - ./postgres-entrypoint.sh:/postgres-entrypoint.sh
       - ./configurations/postgresql/postgresql.conf:/etc/postgresql/postgresql.conf:ro
@@ -30,17 +32,11 @@ services:
       test:
         [
           "CMD-SHELL",
-          'PGPASSWORD="$$(cat /run/secrets/POSTGRES_PASSWORD)" pg_isready -U "$$(cat /run/secrets/POSTGRES_USER)" -d "$$(cat /run/secrets/POSTGRES_DB)" --timeout=5',
+          'PGPASSWORD="$$(cat /run/secrets/POSTGRES_PASSWORD)" pg_isready -U "$$(cat /run/secrets/POSTGRES_USER)" -d "$$(cat /run/secrets/POSTGRES_DB)"',
         ]
-    # healthcheck:
-    #   test:
-    #     [
-    #       "CMD-SHELL",
-    #       'pg_isready -U "$$(cat /run/secrets/POSTGRES_USER)" -d "$$(cat /run/secrets/POSTGRES_DB)"',
-    #     ]
-    #   interval: 5s
-    #   timeout: 5s
-    #   retries: 3
+      interval: 5s
+      timeout: 5s
+      retries: 3
 
   redis:
     image: redis/redis-stack-server:latest
