Fri 19 15:38; Finally TLS workedclear

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,5 +24,8 @@
     "**/volumes",
     "**/redis_storage",
     "**/postgres_storage"
-  ]
+  ],
+  "files.associations": {
+    "Dockerfile.*": "dockerfile"
+  }
 }
