--- a/cluster/swarm/backend/docker-compose.backend.yml
+++ b/cluster/swarm/backend/docker-compose.backend.yml
@@ -1,6 +1,17 @@
 services:
   fastapi:
-    image: kamronbekdev/kronk-fastapi-alpha:2.1
+    image: kamronbekdev/kronk-production:1.0.0
+    command:
+      [
+        "uv",
+        "run",
+        "uvicorn",
+        "main:app",
+        "--host",
+        "0.0.0.0",
+        "--port",
+        "8000",
+      ]
     ports:
       - mode: ingress
         target: 8000
@@ -8,31 +19,37 @@ services:
     networks:
       - traefik-network
     secrets:
+      - CA
+      - FASTAPI_CLIENT_CERT
+      - FASTAPI_CLIENT_KEY
       - DATABASE_URL
-
-      - REDIS_URL
-      - TASKIQ_WORKER_URL
-      - TASKIQ_RESULT_BACKEND_URL
-      - TASKIQ_REDIS_SCHEDULE_SOURCE_URL
-
-      - SECRET_KEY
-      - REFRESH_TOKEN_EXPIRE_TIME
-      - ACCESS_TOKEN_EXPIRE_TIME
-      - ALGORITHM
-
-      - MINIO_BUCKET_NAME
-      - MINIO_ENDPOINT
-      - MINIO_ROOT_PASSWORD
-      - MINIO_ROOT_USER
-
-      - EMAIL_SERVICE_API_KEY
-
+      - REDIS_HOST
       - FIREBASE_ADMINSDK
+      - S3_ACCESS_KEY_ID
+      - S3_SECRET_KEY
+      - S3_ENDPOINT
+      - S3_REGION
+      - S3_BUCKET_NAME
+      - SECRET_KEY
+      - EMAIL_SERVICE_API_KEY
     deploy:
-      replicas: 1
+      replicas: 2
       placement:
         constraints:
           - node.role == worker
+      resources:
+        limits:
+          cpus: "1"
+          memory: 3G
+        reservations:
+          memory: 256M
+      restart_policy:
+        condition: on-failure
+        delay: 5s
+        max_attempts: 3
+      update_config:
+        order: stop-first
+        parallelism: 1
       labels:
         - "prometheus-job=fastapi"
 
@@ -56,14 +73,90 @@ services:
         - "traefik.http.middlewares.fastapi_middleware.redirectscheme.scheme=https"
         - "traefik.http.middlewares.fastapi_middleware.redirectscheme.permanent=true"
 
-        # Health Check
-        # - "traefik.http.services.fastapi_service.loadbalancer.healthcheck.hostname=api.kronk.uz" # optional
-        # - "traefik.http.services.fastapi_service.loadbalancer.healthcheck.path=/healthy" # required
-        # - "traefik.http.services.fastapi_service.loadbalancer.healthcheck.interval=60s" # default: 30s
+  taskiq_worker:
+    image: kamronbekdev/kronk-production:1.0.0
+    command:
+      [
+        "uv",
+        "run",
+        "taskiq",
+        "worker",
+        "settings.my_taskiq:broker",
+      ]
+    secrets:
+      - CA
+      - FASTAPI_CLIENT_CERT
+      - FASTAPI_CLIENT_KEY
+      - DATABASE_URL
+      - REDIS_HOST
+      - FIREBASE_ADMINSDK
+      - S3_ACCESS_KEY_ID
+      - S3_SECRET_KEY
+      - S3_ENDPOINT
+      - S3_REGION
+      - S3_BUCKET_NAME
+      - SECRET_KEY
+      - EMAIL_SERVICE_API_KEY
+    deploy:
+      replicas: 1
+      placement:
+        constraints:
+          - node.role == worker
       resources:
         limits:
           cpus: "1"
           memory: 1G
+        reservations:
+          memory: 256M
+      restart_policy:
+        condition: on-failure
+        delay: 5s
+        max_attempts: 3
+      update_config:
+        order: stop-first
+        parallelism: 1
+
+  taskiq_scheduler:
+    image: kamronbekdev/kronk-production:1.0.0
+    command:
+      [
+        "uv",
+        "run",
+        "taskiq",
+        "scheduler",
+        "settings.my_taskiq:scheduler",
+      ]
+    networks:
+      - traefik-network
+    secrets:
+      - CA
+      - FASTAPI_CLIENT_CERT
+      - FASTAPI_CLIENT_KEY
+      - DATABASE_URL
+      - REDIS_HOST
+      - FIREBASE_ADMINSDK
+      - S3_ACCESS_KEY_ID
+      - S3_SECRET_KEY
+      - S3_ENDPOINT
+      - S3_REGION
+      - S3_BUCKET_NAME
+      - SECRET_KEY
+      - EMAIL_SERVICE_API_KEY
+    deploy:
+      replicas: 1
+      placement:
+        constraints:
+          - node.role == worker
+      resources:
+        limits:
+          cpus: "1"
+          memory: 1G
+        reservations:
+          memory: 256M
+      restart_policy:
+        condition: on-failure
+        delay: 5s
+        max_attempts: 3
       update_config:
         order: stop-first
         parallelism: 1
