--- a/cluster/swarm/grafana/docker-compose.grafana.yml
+++ b/cluster/swarm/grafana/docker-compose.grafana.yml
@@ -1,6 +1,6 @@
 services:
   grafana:
-    image: grafana/grafana:latest
+    image: grafana/grafana-oss:latest
     ports:
       - mode: host
         target: 3000
@@ -14,13 +14,13 @@ services:
     secrets:
       - GF_SECURITY_ADMIN_USER
       - GF_SECURITY_ADMIN_PASSWORD
-    # environment:
-      # GF_AUTH_DISABLE_LOGIN_FORM: "false"
-      # GF_AUTH_ANONYMOUS_ENABLED: "false"
-      # GF_SECURITY_ADMIN_USER__FILE: /run/secrets/GF_SECURITY_ADMIN_USER
-      # GF_SECURITY_ADMIN_PASSWORD__FILE: /run/secrets/GF_SECURITY_ADMIN_PASSWORD
-      # GF_SECURITY_ADMIN_USER: kamronbek
-      # GF_SECURITY_ADMIN_PASSWORD: kamronbek2003
+    environment:
+      GF_AUTH_DISABLE_LOGIN_FORM: "false"
+      GF_AUTH_ANONYMOUS_ENABLED: "false"
+      GF_SECURITY_ADMIN_USER__FILE: /run/secrets/GF_SECURITY_ADMIN_USER
+      GF_SECURITY_ADMIN_PASSWORD__FILE: /run/secrets/GF_SECURITY_ADMIN_PASSWORD
+      # GF_SECURITY_ADMIN_USER: *****
+      # GF_SECURITY_ADMIN_PASSWORD: *****
     deploy:
       labels:
         - "traefik.enable=true"
