--- a/cluster/swarm/prometheus/docker-compose.prometheus.yml
+++ b/cluster/swarm/prometheus/docker-compose.prometheus.yml
@@ -30,16 +30,19 @@ services:
         - "traefik.http.routers.prometheus_http.rule=Host(`prometheus.kronk.uz`)"
         - "traefik.http.routers.prometheus_http.entrypoints=http"
         - "traefik.http.routers.prometheus_http.middlewares=prometheus_middleware"
+        - "traefik.http.routers.prometheus_http.middlewares=auth_middleware"
 
         # HTTPS
         - "traefik.http.routers.prometheus_https.rule=Host(`prometheus.kronk.uz`)"
         - "traefik.http.routers.prometheus_https.entrypoints=https"
         - "traefik.http.routers.prometheus_https.tls=true"
         - "traefik.http.routers.prometheus_https.tls.certresolver=leresolver"
+        - "traefik.http.routers.prometheus_https.middlewares=auth_middleware"
 
         # Middleware
         - "traefik.http.middlewares.prometheus_middleware.redirectscheme.scheme=https"
         - "traefik.http.middlewares.prometheus_middleware.redirectscheme.permanent=true"
+        - "traefik.http.middlewares.auth_middleware.basicauth.usersfile=/run/secrets/MONITORING_CREDENTIALS"
       mode: replicated
       replicas: 1
       placement:
