--- a/cluster/swarm/traefik/docker-compose.traefik.yml
+++ b/cluster/swarm/traefik/docker-compose.traefik.yml
@@ -6,14 +6,15 @@ services:
       - "--api.insecure=false"
       - "--api.dashboard=true"
       - "--providers.swarm=true"
-      - "--providers.swarm.endpoint=unix:///var/run/docker.sock" # Default
+      - "--providers.swarm.endpoint=tcp://127.0.0.1:2376"
+      # - "--providers.swarm.endpoint=unix:///var/run/docker.sock" # Default
       - "--providers.swarm.network=traefik-network" # This option can be overridden on a per-container basis with the 'traefik.docker.network'
       # - "--traefik.swarm.lbswarm=true" # If you enable this option, Traefik will use the virtual IP provided by docker swarm instead of the containers IPs
       # - "--providers.swarm.constraints=Label(`a.label.name`,`foo`)" $ If none of the container labels match the expression, no route for that container is created.
       - "--providers.swarm.tls=true"
       - "--providers.swarm.tls.ca=/run/secrets/ca.pem"
-      - "--providers.swarm.tls.cert=/run/secrets/fastapi-client-cert.pem"
-      - "--providers.swarm.tls.key=/run/secrets/fastapi-client-key.pem"
+      - "--providers.swarm.tls.cert=/run/secrets/docker-client-cert.pem"
+      - "--providers.swarm.tls.key=/run/secrets/docker-client-key.pem"
       - "--providers.swarm.tls.insecureSkipVerify=false"
       - "--providers.swarm.exposedbydefault=false"
       - "--entrypoints.http.address=:80"
@@ -25,24 +26,32 @@ services:
       - "--certificatesresolvers.leresolver.acme.storage=/letsencrypt/acme.json"
       - "--log.level=WARN"
       - "--accesslog.filepath=/log/access/access.log"
-    ports:
-      - "80:80"
-      - "443:443"
     # ports:
-    # - target: 80
-    #   published: 80
-    #   protocol: tcp
-    #   mode: host
-    # - target: 443
-    #   published: 443
-    #   protocol: tcp
-    #   mode: host
+    #   - "80:80"
+    #   - "443:443"
+    ports:
+      - target: 80
+        published: 80
+        protocol: tcp
+        mode: host
+      - target: 443
+        published: 443
+        protocol: tcp
+        mode: host
     networks:
       - traefik-network
+    sysctls:
+      - net.ipv4.conf.all.route_localnet=1
     secrets:
-      - traefik_user_credentials
+      - source: ca.pem
+        target: ca.pem
+      - source: docker-client-cert.pem
+        target: docker-client-cert.pem
+      - source: docker-client-key.pem
+        target: docker-client-key.pem
+      - MONITORING_CREDENTIALS
     volumes:
-      - "/var/run/docker.sock:/var/run/docker.sock:ro"
+      # - "/var/run/docker.sock:/var/run/docker.sock:ro"
       - "./config/acme.json:/letsencrypt/acme.json"
       - "./config/access.log:/log/access/access.log"
     deploy:
@@ -77,7 +86,7 @@ services:
         - "traefik.http.middlewares.traefik_middleware.redirectscheme.scheme=https"
         - "traefik.http.middlewares.traefik_middleware.redirectscheme.permanent=true"
         # - "traefik.http.middlewares.auth_middleware.basicauth.users=kamronbek:$2y$$05$$sRDJSkw6MXXeuSfXeyNbD.azZy0SDEYB2rT6w3R.hwgxebRrFW.Ji"
-        - "traefik.http.middlewares.auth_middleware.basicauth.usersfile=/run/secrets/traefik_user_credentials"
+        - "traefik.http.middlewares.auth_middleware.basicauth.usersfile=/run/secrets/MONITORING_CREDENTIALS"
       mode: replicated
       replicas: 1
       placement:
@@ -96,5 +105,11 @@ networks:
     driver: overlay
 
 secrets:
-  traefik_user_credentials:
+  ca.pem:
+    external: true
+  docker-client-cert.pem:
+    external: true
+  docker-client-key.pem:
+    external: true
+  MONITORING_CREDENTIALS:
     external: true
