--- a/pod/alembic.ini
+++ b/pod/alembic.ini
@@ -85,6 +85,7 @@ path_separator = os
 # other means of configuring database URLs may be customized within the env.py
 # file.
 sqlalchemy.url = postgresql+asyncpg://kamronbek:kamronbek2003@localhost:5432/kronk_db
+;sqlalchemy.url = postgresql+asyncpg://kamronbek:kamronbek2003@postgres.kronk.uz:5432/kronk_db
 
 
 [post_write_hooks]
