Mon 04 10:20, Big impruvements starting

--- a/pod/alembic.ini
+++ b/pod/alembic.ini
@@ -84,8 +84,8 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-;sqlalchemy.url = postgresql+asyncpg://kamronbek:kamronbek2003@localhost:5432/kronk_db
-sqlalchemy.url = postgresql+asyncpg://kamronbek:kamronbek2003@postgres.kronk.uz:5432/kronk_db
+sqlalchemy.url = postgresql+asyncpg://kamronbek:kamronbek2003@localhost:5432/kronk_db
+;sqlalchemy.url = postgresql+asyncpg://kamronbek:kamronbek2003@postgres.kronk.uz:5432/kronk_db
 
 
 [post_write_hooks]
