gitignore added GCP credentials

--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,9 @@ service/volumes/minio_storage
 
 */__pycache__
 
-# Ignore Firebase Admin SDK
+# Ignore Firebase Admin SDK & GCP credentials
 certs/kronk-production-firebase-adminsdk.json
+certs/kronk-production-gcp-credentials.json
 
 # Ignore everything in certs (optional)
  certs/
