--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ service/volumes/minio_storage
 */__pycache__
 
 # Ignore Firebase Admin SDK & GCP credentials
+certs/kronk-production-firebase-adminsdk.json
+certs/kronk-production-gcp-credentials.json
 pod/certs/kronk-production-firebase-adminsdk.json
 pod/certs/kronk-production-gcp-credentials.json
 
