--- a/.gitignore
+++ b/.gitignore
@@ -22,4 +22,5 @@ pod/certs/kronk-production-firebase-adminsdk.json
 pod/certs/kronk-production-gcp-credentials.json
 
 # Ignore everything in certs (optional)
+certs
 pod/certs/
