fixed .gitignore to exclude certs

--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,5 @@ pod/certs/kronk-production-firebase-adminsdk.json
 pod/certs/kronk-production-gcp-credentials.json
 
 # Ignore everything in certs (optional)
-certs
+certs/
 pod/certs/
