--- a/pod/pyproject.toml
+++ b/pod/pyproject.toml
@@ -46,39 +46,6 @@ dependencies = [
     "aioboto3>=15.1.0",
 ]
 
-[tool.pyright]
-include = ["."]
-venvPath = "./"
-venv = ".venv"
-extraPaths = [".venv", ".env", "venv", "env", "pod/.venv"]
-typeCheckingMode = "standard"
-pythonVersion = "3.13"
-
-[tool.ruff]
-target-version = "py313"
-line-length = 180
-
-[tool.ruff.format]
-quote-style = "double"
-
-[tool.mypy]
-mypy_path = [".venv", ".env", "venv", "env"]
-files = ["./"]
-strict = true
-ignore_missing_imports = true
-
-[tool.black]
-line-length = 180
-target-version = ["py313"]
-
-[tool.ty.src]
-root = "./"
-
-[tool.ty.environment]
-python = "./.venv"
-python-version = "3.13"
-
-
 [dependency-groups]
 dev = [
     "alembic",
@@ -91,4 +58,39 @@ dev = [
     "types-aioboto3[essential]",
     "types-redis",
 ]
+
+[tool.pyright]
+include = ["."]
+venvPath = "./"
+venv = ".venv"
+extraPaths = [".venv", ".env", "venv", "env", "pod/.venv"]
+typeCheckingMode = "strict"
+pythonVersion = "3.13"
+
+[tool.ruff]
+target-version = "py313"
+line-length = 180
+
+[tool.ruff.format]
+quote-style = "double"
+
+[tool.mypy]
+mypy_path = [".venv", ".env", "venv", "env", "./pod/.venv", "./pod/.env"]
+files = ["./", "./pod/"]
+strict = true
+ignore_missing_imports = false
+
+[tool.black]
+line-length = 180
+target-version = ["py313"]
+
+[tool.ty.src]
+root = "./"
+
+[tool.ty.environment]
+python = ".venv"
+python-version = "3.13"
+
+
+
 
