Remove certs and secrets, add cleanup

--- a/service/configurations/redis-stack/redis-stack.conf
+++ b/service/configurations/redis-stack/redis-stack.conf
@@ -1,5 +1,6 @@
 maxmemory 4096mb
-maxmemory-policy allkeys-lru
+# maxmemory-policy allkeys-lru
+maxmemory-policy noeviction
 appendonly yes
 
 loadmodule /opt/redis-stack/lib/redisearch.so
